[package]
name = "wgpu-test"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fluid = { git = "https://github.com/nrayamajhee/fluid.git" }
wasm-bindgen-futures = "0.4.36"
genmesh = "0.6.2"
js-sys = "0.3.63"
nalgebra = "0.32.2"
gloo-console = "0.2.3"
gloo-utils = { version = "0.1.6", features = ["serde"] }
gloo-render = "0.1.1"
wasm-bindgen = "0.2.86"
serde = { version = "1.0.163", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.63"
features = [
  "Document",
  "Window",
  "HtmlCanvasElement",
  "GpuDevice",
  "GpuQueue",
  "GpuAdapter",
  "Navigator",
  "Gpu",
  "GpuBuffer",
  "GpuBufferDescriptor",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuTexture",
  "GpuTextureFormat",
  "GpuTextureView",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuVertexState",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuColorTargetState",
  "GpuCullMode",
  "GpuFrontFace",
  "GpuCompareFunction",
  "GpuVertexBufferLayout",
  "GpuVertexAttribute",
  "GpuVertexFormat",
  "GpuCommandEncoder",
  "GpuRenderPassDescriptor",
  "GpuLoadOp",
  "GpuStoreOp",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "gpu_buffer_usage",
  "gpu_texture_usage",
  "GpuTextureDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassEncoder",
  "GpuCommandBuffer",
  "GpuCanvasAlphaMode",
]
