[package]
name = "wgpu-test"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fluid = { git = "https://github.com/nrayamajhee/fluid.git" }
wasm-bindgen-futures = "0.4.37"
genmesh = "0.6.2"
js-sys = "0.3.64"
nalgebra = "0.32.3"
gloo-console = "0.2.3"
gloo-utils = { version = "0.1.7", features = ["serde"] }
gloo-render = "0.1.1"
gloo-timers = "0.2.6"
wasm-bindgen = "0.2.87"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rapier3d = "0.17.2"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "Performance",
  "Navigator",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "GpuDevice",
  "GpuQueue",
  "GpuAdapter",
  "Gpu",
  "GpuBuffer",
  "GpuBufferDescriptor",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuTexture",
  "GpuTextureFormat",
  "GpuTextureView",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuVertexState",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuColorTargetState",
  "GpuCullMode",
  "GpuFrontFace",
  "GpuCompareFunction",
  "GpuVertexBufferLayout",
  "GpuVertexAttribute",
  "GpuVertexFormat",
  "GpuCommandEncoder",
  "GpuLoadOp",
  "GpuStoreOp",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuTextureDescriptor",
  "GpuCommandBuffer",
  "GpuCanvasAlphaMode",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassEncoder",
  "GpuBindGroup",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayoutEntry",
  "GpuBufferBindingLayout",
  "GpuBufferBinding",
  "GpuIndexFormat",
  "GpuTexture",
  "GpuSamplerBindingType",
  "GpuSampler",
  "GpuFilterMode",
  "GpuAddressMode",
  "GpuImageCopyExternalImage",
  "GpuImageCopyTextureTagged",
  "GpuSamplerDescriptor",
  "gpu_shader_stage",
  "gpu_buffer_usage",
  "gpu_texture_usage",
  "Response",
  "Blob",
  "ImageBitmap",
]
