[package]
name = "wgpu-test"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
fluid = { git = "https://github.com/nrayamajhee/fluid.git" }
fluid-macro = { git = "https://github.com/nrayamajhee/fluid.git" }
wasm-bindgen-futures = "0.4.42"
genmesh = "0.6.2"
js-sys = "0.3.69"
nalgebra = "0.33.0"
gloo-console = "0.3.0"
gloo-utils = { version = "0.2.0", features = ["serde"] }
gloo-render = "0.2.0"
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rapier3d = "0.21.0"
noise = "0.9.0"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Performance",
  "Navigator",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "HtmlElement",
  "DomTokenList",
  "GpuDevice",
  "GpuQueue",
  "GpuAdapter",
  "Gpu",
  "GpuBuffer",
  "GpuBufferDescriptor",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuTexture",
  "GpuTextureFormat",
  "GpuTextureView",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuVertexState",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuColorTargetState",
  "GpuCullMode",
  "GpuFrontFace",
  "GpuCompareFunction",
  "GpuVertexBufferLayout",
  "GpuVertexAttribute",
  "GpuVertexFormat",
  "GpuCommandEncoder",
  "GpuLoadOp",
  "GpuStoreOp",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuTextureDescriptor",
  "GpuTextureViewDescriptor",
  "GpuTextureViewDimension",
  "GpuTextureDimension",
  "GpuCommandBuffer",
  "GpuCanvasAlphaMode",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassEncoder",
  "GpuBindGroup",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayoutEntry",
  "GpuBufferBindingLayout",
  "GpuBufferBinding",
  "GpuIndexFormat",
  "GpuTexture",
  "GpuSamplerBindingType",
  "GpuSampler",
  "GpuFilterMode",
  "GpuAddressMode",
  "GpuImageCopyExternalImage",
  "GpuImageCopyTextureTagged",
  "GpuSamplerDescriptor",
  "gpu_shader_stage",
  "gpu_buffer_usage",
  "gpu_texture_usage",
  "Response",
  "Blob",
  "ImageBitmap",
  "KeyboardEvent",
  "WheelEvent",
  "MouseEvent"
]
